Set min-height to avoid overlapping

--- a/app/assets/stylesheets/_misc_legacy.sass
+++ b/app/assets/stylesheets/_misc_legacy.sass
@@ -654,5 +654,6 @@ a.impaired--empty-link,
 
 // Avoid content cut off in IE
 #new-member-message + div.grid-block
+  min-height: 6rem
   div.grid-block
     overflow: visible
